@@ -8,7 +8,7 @@ case $1 in
 		cd /etc
 		rm -f make.profile
 		
-		ln -sf /usr/portage/profiles/hardened-${MAINARCH}-${MAINVERSION} make.profile
+		ln -sf /usr/portage/profiles/${BUILDTYPE}-${MAINARCH}-${MAINVERSION} make.profile
 		export ROOT=${2}
 		install -d $ROOT
 		for x in $(/tmp/build.sh ${MAINARCH}-${MAINVERSION})
@@ -56,7 +56,7 @@ case $1 in
 		#fix up profile symlink in chroot
 		cd /etc
 		rm -f make.profile
-		ln -sf ../usr/portage/profiles/default-${MAINARCH}-${MAINVERSION} make.profile
+		ln -sf ../usr/portage/profiles/${BUILDTYPE}-${MAINARCH}-${MAINVERSION} make.profile
 EOF
 		;;
 esac
