@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.21 2003/10/05 19:44:43 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.22 2003/10/07 18:00:37 zhen Exp $
 
 # source the config file
 VERSION="1.3"
@@ -121,7 +121,6 @@ tardir() {
 	cd ${SRCFORTAR} || die "Couldn't chdir; exiting."
 	tar -cjf ${DESTBALL} . --numeric-owner || die "Tarball creation error; exiting."
 	cd ${BASEDIR}
-	einfo "done!"
 }
 
 makeconf() {
@@ -361,11 +360,11 @@ pre_build() {
 	
 	# necessary internal definitions
 	DESTBALL="${BASEDIR}/stages/stage${1}-${DESTARCH}-etdyn-ssp-${3}.tar.bz2"
-	if [ ${DESTSTAGE} != 2 ]
+	if [ ${DESTSTAGE} = 2 ] && [ ${SRCSTAGE} != 1 ]
 	then
-		SRCBALL="${BASEDIR}/stages/stage${SRCSTAGE}-${SRCARCH}-etdyn-ssp-${SRCVER}.tar.bz2"
-	else
 		SRCBALL="${BASEDIR}/stages/stage${SRCSTAGE}-${SRCARCH}-${SRCVER}.tar.bz2"
+	else
+		SRCBALL="${BASEDIR}/stages/stage${SRCSTAGE}-${SRCARCH}-etdyn-ssp-${SRCVER}.tar.bz2"
 	fi
 
 	einfo "Cleaning up build directory..."
@@ -428,7 +427,7 @@ build() {
 			cp ${BASEDIR}/bin/stage1 ${CHROOTDIR}/tmp
 			cp ${BASEDIR}/bin/build.sh ${CHROOTDIR}/tmp
 			#CHOST is for the gcc-config initialization step
-			export MAINVERSION MAINARCH CHOST
+			export MAINVERSION MAINARCH CHOST BUILDTYPE
 			#get our make.conf instide our new tree
 			#good idea because make.conf should be there.
 			#also necessary because the "stage1" script runs gcc-config, which
