@@ -1,6 +1,11 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.9 2003/10/05 19:44:43 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.10 2003/10/07 18:00:37 zhen Exp $
+
+  07 Oct 2003; zhen <zhen@gentoo.org> catalyst, bin/bootstrap.sh, bin/stage1:
+  I mucked with stage1 and bootstrap.sh to add support for ${BUILDTYPE} (profile
+  transparency). Also, I removed gettext from bootstrap, since mainline gentoo
+  does not use that anymore.
 
   05 Oct 2003; zhen <zhen@gentoo.org> catalyst:
   since we now have a default profile in portage, i massaged some errors
